@@ -1,4 +1,4 @@
-.TH SG_DD "8" "November 2008" "sg3_utils\-1.27" SG3_UTILS
+.TH SG_DD "8" "December 2008" "sg3_utils\-1.27" SG3_UTILS
 .SH NAME
 sg_dd \- copies data to and from files and devices. Specialised for
 devices that understand the SCSI command set.
@@ -28,6 +28,12 @@ The first group in the synopsis above are "standard" Unix
 .B dd(1)
 operands. The second group are extra options added by this utility.
 Both groups are defined below.
+.PP
+This utility is only supported on Linux whereas most other utilities in
+the sg3_utils package have been ported to other operating systems.
+A package called "ddpt" contains a utility of the same name. ddpt has
+been ported to other operating systems and is similar in functionality,
+but less Linux specific, to sg_dd.
 .SH OPTIONS
 .TP
 \fBblk_sgio\fR=0 | 1
@@ -481,4 +487,4 @@ recovery see
 .B sdparm(sdparm)
 .PP
 See also
-.B raw(8), dd(1), ddrescue(GNU)
+.B raw(8), dd(1), ddrescue(GNU), ddpt
