@@ -2,7 +2,7 @@ sg3-utils (1.27-0.1) unstable; urgency=low
 
   * New upstream version
 
- -- Doug Gilbert <dgilbert@interlog.com>  Mon, 01 Dec 2008 20:20:00 +0100
+ -- Doug Gilbert <dgilbert@interlog.com>  Sat, 27 Dec 2008 15:20:00 -0500
 
 sg3-utils (1.26-0.1) unstable; urgency=low
 
