@@ -2,7 +2,7 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.27 [20081215] [svn: r203]
+Changelog for sg3_utils-1.27 [20081227] [svn: r204]
   - sg_inq: sync version descriptors with spc4r17
   - sg_map26: fix for lk 2.6.26 when CONFIG_SYSFS_DEPRECATED_V2
     is not defined
@@ -16,6 +16,7 @@ Changelog for sg3_utils-1.27 [20081215] [svn: r203]
     - when new 'nocache' flag given
   - sg_get_config: add OSSC feature [mmc6r02]
   - sg_modes: add ATA power condition mode page
+  - sg_logs: protocol specific (SAS) lpage sync to sas2r15
   - sg3_utils.spec: correction to configure call
   - sg_pt: add scsi_pt_open_device_flags() call to public interface
   - sg_cmds: add sg_cmds_open_device_flags() call previous entry
